--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TALE Pair Finder - Modern Bioinformatics Tool</title>
+    <title>TALE Pair Finder</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
 
@@ -1960,6 +1960,7 @@
     </script>
 </body>
 </html>
+
 
 
 
